# graphANNIS

./: .gitattributes  .gitignore  .project  .travis.yml  BOM.txt  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Cargo.toml  README.md  README_cratesio.md  about.hbs  about.toml  annis_history.txt  appveyor.yaml  appveyor.yml  bors.toml  build.rs  cbindgen.toml  crate-info.md  dist-workspace.toml  graphannis.code-workspace  merge-request-checks.sh  pom.xml  release-checklist.html  release.toml  third-party-licenses.html  travis-build.sh  valgrind.supp  verify.sh
c-api/: Cargo.toml  build.rs  cbindgen.toml
c-api/include/: graphannis-capi.h
c-api/src/: corpusstorage.rs  data.rs  error.rs  graph.rs  lib.rs  logging.rs  update.rs
capi/: Cargo.toml  cbindgen.toml  crate-info.md  release.toml
capi/include/: graphannis-capi.h
capi/src/: cerror.rs  corpusstorage.rs  data.rs  graph.rs  lib.rs  logging.rs  update.rs
cli/: Cargo.toml
cli/tests/: cli.rs
cli/tests/snapshots/: cli__export_to_zip_file.snap  cli__list_corpora.snap  cli__list_corpora_fully_loaded.snap  cli__list_corpora_not_loaded.snap  cli__list_corpora_partially_loaded.snap  cli__show_corpus_info.snap
core/: Cargo.toml  crate-info.md  release.toml
core/src/: annostorage.rs  dfs.rs  errors.rs  graph.rs  graphstorage.rs  lib.rs  serializer.rs  types.rs  util.rs
core/src/annostorage/: inmemory.rs  mod.rs  ondisk.rs  symboltable.rs
core/src/annostorage/inmemory/: tests.rs
core/src/annostorage/ondisk/: tests.rs
core/src/graph/: mod.rs  tests.rs  update.rs
core/src/graph/serialization/: graphml.rs  graphml_example sorted.graphml  graphml_example.graphml  graphml_example.xml  mod.rs  output_example.xml
core/src/graph/storage/: adjacencylist.rs  legacy.rs  (+9 more)
core/src/util/: disk_collections.rs  example_graphs.rs  memory_estimation.rs  mod.rs
ext/malloc_size_of/: Cargo.toml  lib.rs
ext/malloc_size_of_derive/: Cargo.toml
graphannis/: .gitignore  Cargo.toml  build.rs  crate-info.md  release.toml
graphannis-rs/: .gitignore  Cargo.toml  build.rs
graphannis-rs/capi/: Cargo.toml
graphannis-rs/capi/include/: annisbase.h
graphannis-rs/capi/src/: lib.rs  stringstorage.rs
graphannis-rs/include/: graphannis-api.h  graphannis-capi.h
graphannis-rs/include/graphannis/: stringstorage.h
graphannis-rs/src/: c_api.rs  dfs.rs  graphdb.rs  lib.rs  nodesearch.rs  plan.rs  relannis.rs  types.rs
graphannis-rs/src/annis/: annostorage.rs  dfs.rs  graphdb.rs  mod.rs  relannis.rs  stringstorage.rs
graphannis-rs/src/annostorage/: mod.rs  tests.rs
graphannis-rs/src/api/: corpusstorage.rs  mod.rs
graphannis-rs/src/exec/: binary_filter.rs  indexjoin.rs  mod.rs  nestedloop.rs  nodesearch.rs
graphannis-rs/src/graphstorage/: adjacencylist.rs  mod.rs  registry.rs
graphannis-rs/src/join/: indexjoin.rs  mod.rs  nestedloop.rs
graphannis-rs/src/operator/: abstract_edge_op.rs  edge_op.rs  inclusion.rs  mod.rs  overlap.rs  precedence.rs
graphannis-rs/src/parser/: jsonqueryparser.rs  mod.rs
graphannis-rs/src/query/: conjunction.rs  disjunction.rs  mod.rs
graphannis-rs/src/stringstorage/: c_api.rs  mod.rs
graphannis-rs/src/util/: c_api.rs  mod.rs  token_helper.rs
graphannis-rs/tests/: loadtest.rs
graphannis/benches/: bench_search.rs  graphannis.rs  search.rs
graphannis/include/: graphannis-capi.h
graphannis/src/: dfs.rs  graphdb.rs  lib.rs  plan.rs  relannis.rs  types.rs
graphannis/src/annis/: dfs.rs  errors.rs  mod.rs  operator.rs  types.rs
graphannis/src/annostorage/: c_api.rs  mod.rs
graphannis/src/api/: corpusstorage.rs  graph.rs  mod.rs  update.rs
graphannis/src/capi/: cerror.rs  corpusstorage.rs  data.rs  graph.rs  update.rs
graphannis/src/exec/: binary_filter.rs  indexjoin.rs  mod.rs  nestedloop.rs  nodesearch.rs
graphannis/src/graphstorage/: adjacencylist.rs  linear.rs  mod.rs  prepost.rs  registry.rs
graphannis/src/operator/: edge_op.rs  identical_cov.rs  identical_node.rs  inclusion.rs  mod.rs  overlap.rs  precedence.rs
graphannis/src/parser/: jsonqueryparser.rs
graphannis/src/query/: conjunction.rs  disjunction.rs  mod.rs
graphannis/src/stringstorage/: mod.rs
graphannis/src/util/: memory_estimation.rs  mod.rs  sort_matches.rs  token_helper.rs
graphannis/tests/: CorpusWithLinkedFile.graphml  SaltSampleCorpus.graphml  SegmentationWithGaps.graphml  linked_file.txt  loadtest.rs  searchtest.rs  searchtest_parallel.rs  searchtest_queries.csv  single_sentence.graphml
graphannis/tests/MissingSegmentationCorpus/: node.annis
graphannis/tests/SaltSampleCorpus/: component.annis  corpus.annis  node.annis  rank.annis  resolver_vis_map.annis
graphannis/tests/SpecialCharCorpusName/: corpus.annis  node_annotation.annis  resolver_vis_map.annis  text.annis
webservice/: .gitignore  Cargo.toml  api-docs.html  crate-info.md
webservice/docs/: README.md
webservice/docs/Apis/: AdministrationApi.md  AuthentificationApi.md  CorporaApi.md  SearchApi.md
webservice/docs/Models/: AnnoKey.md  Annotation.md  AnnotationComponentType.md  Component.md  CorpusConfiguration.md  CorpusConfigurationContext.md  CorpusConfigurationView.md  CountExtra.md  CountQuery.md  ExampleQuery.md  FindQuery.md  FrequencyQuery.md  FrequencyQueryDefinition.md  FrequencyTableRow.md  GraphAnnisError.md  GraphAnnisErrorAQLSyntaxError.md  GraphAnnisErrorLoadingGraphFailed.md  Group.md  ImportResult.md  InlineObject.md  InlineObject1.md  InlineResponse202.md  Job.md  LineColumn.md  LineColumnRange.md  QueryAttributeDescription.md  QueryLanguage.md  SubgraphWithContext.md  VisualizerRule.md
webservice/migrations/2020-06-10-171445_corpus_groups/: down.sql  up.sql
webservice/migrations/2020-06-16-105832_corpus_corpus/: down.sql  up.sql
webservice/src/: actions.rs  auth.rs  default-settings.toml  errors.rs  extractors.rs  main.rs  models.rs  openapi.yml  schema.rs  search.rs  settings.rs  tests.rs
webservice/src/api/: administration.rs  auth.rs  corpora.rs  mod.rs  openapi: '3.0.2'.yml  search.rs
webservice/src/snapshots/: graphannis_webservice__tests__logfile.snap  graphannis_webservice__tests__logfile_debug.snap
(+7613 files in other folders)
