[workspace]
members = [
  "core",
  "graphannis",
  "cli",
  "capi",
  "webservice",
  "examples/tutorial",
]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Which actions to run on pull requests
pr-run-mode = "plan"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-22.04"


# Use release optimization of some of the performance sensitive crates even for debug builds.
# This allows faster builds and debugging of our own code, while balancing performance.
[profile.dev.package.bincode]
opt-level = 3

[profile.dev.package.csv]
opt-level = 3

[profile.dev.package.regex]
opt-level = 3

[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.sstable]
opt-level = 3

[profile.dev.package.quick-xml]
opt-level = 3

[profile.dev.package.zip]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
