[package]
name = "c-api"
version = "0.1.0"
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
build = "build.rs"

workspace = ".."

[lib]
crate-type = ["staticlib","cdylib"]

[dependencies]
graphannis = {path = "../graphannis"}

libc = "*"


[build-dependencies]
moz-cheddar = "0.4"
rust-crypto = "^0.2"