[package]
name = "graphannis-capi"
version = "0.7.0" #:version
authors = ["Thomas Krause <thomaskrause@posteo.de>"]

license = "Apache-2.0"
description = "This is a C-API for a prototype of a new backend implementation of the ANNIS linguistic search and visualization system."
repository= "https://github.com/thomaskrause/graphANNIS"
readme = "../README.md"


workspace = ".."

[lib]
crate-type = ["staticlib","cdylib"]

[dependencies]
graphannis = {path = "../graphannis", version = "0.7"}
simplelog = "0.5"
log = "0.4"

libc = "0.2"
