[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
description = "This is the C-API to the ANNIS linguistic search and visualization system."
edition = "2018"
license = "Apache-2.0"
name = "graphannis-capi"
readme = "crate-info.md"
repository = "https://github.com/korpling/graphANNIS"
version = "2.0.3"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1"
graphannis = {path = "../graphannis/", version = "^2"}
itertools = "0.10"
libc = "0.2"
log = "0.4"
simplelog = {version = "0.10"}
