[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
description = "This is the C-API to the ANNIS linguistic search and visualization system."
edition = "2018"
license = "Apache-2.0"
name = "graphannis-capi"
readme = "crate-info.md"
repository = "https://github.com/korpling/graphANNIS"
version = "3.1.0"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
graphannis = {path = "../graphannis/", version = "^3"}
itertools = "0.10"
libc = "0.2"
log = "0.4"
simplelog = {version = "0.12"}
