[package]
name = "graphannis-cli"
version = "0.31.1"
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
license = "Apache-2.0"
description = "This is a command-line interface to the new backend implementation of the ANNIS linguistic search and visualization system."
repository = "https://github.com/korpling/graphANNIS"
readme = "crate-info.md"
autobins = true
edition = "2018"

[dependencies]
graphannis= {path = "../graphannis/", version= "^0.31"}
rustyline = "6.1"
rustyline-derive = "0.3"
simplelog = "0.7"
clap = "2"
criterion = "0.3"
prettytable-rs = "0.8"
anyhow = "1"
log = "0.4"
toml = "0.5"

[[bin]]
name="annis"

[[bin]]
name="bench_annisqueries"
