[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
autobins = true
description = "This is a command-line interface to the new backend implementation of the ANNIS linguistic search and visualization system."
edition = "2018"
license = "Apache-2.0"
name = "graphannis-cli"
readme = "crate-info.md"
repository = "https://github.com/korpling/graphANNIS"
version = "2.4.0"

[dependencies]
anyhow = "1"
clap = {version = "2", default-features = false}
compound_duration = "1"
criterion = "0.3"
graphannis = {path = "../graphannis/", version = "^2"}
log = "0.4"
prettytable-rs = "0.8"
rustyline = "9"
rustyline-derive = "0.5"
simplelog = "0.10"
toml = "0.5"

[[bin]]
name = "annis"

[[bin]]
name = "bench_queries"
