[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
autobins = true
description = "This is a command-line interface to the new backend implementation of the ANNIS linguistic search and visualization system."
edition = "2021"
license = "Apache-2.0"
name = "graphannis-cli"
readme = "crate-info.md"
repository = "https://github.com/korpling/graphANNIS"
version = "3.7.0"

[dependencies]
anyhow = "1"
clap = { version = "2", default-features = false }
compound_duration = "1"
criterion = "0.3"
graphannis = { path = "../graphannis/", version = "^3" }
log = "0.4"
prettytable-rs = "0.10.0"
rustyline = "9"
rustyline-derive = "0.5"
simplelog = "0.12"
toml = "0.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
assert_cmd = "2.0.12"
insta = { version = "1.34.0", features = ["filters"] }
insta-cmd = "0.5"
serial_test = "2"

[[bin]]
name = "annis"

[[bin]]
name = "annis_bench_queries"

[package.metadata.cargo-machete]
ignored = ["prettytable-rs"]
