[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
name = "graphannis-core"
version = "1.2.2"

description = "This crate supports graph representation and generic query-functionality."
edition = "2018"
license = "Apache-2.0"
readme = "crate-info.md"
repository = "https://github.com/korpling/graphANNIS"

[lib]

[dependencies]
bincode = "1.2"
graphannis-malloc_size_of = {version = "1.1", features = ["smartstring"]}
graphannis-malloc_size_of_derive = "2.0"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
percent-encoding = "2.1"
quick-xml = "0.18"
rand = {version = "0.8", features = ["small_rng"]}
rayon = {version = "1.3", default-features = false}
regex = "1"
regex-syntax = "0.6"
rustc-hash = "1.0"
serde = {version = "1.0", features = ["rc"]}
serde_derive = "1.0"
smallvec = "1.6"
smartstring = {version = "0.2", features = ["serde"]}
sstable = "0.8.2"
strum = "0.21"
strum_macros = "0.21"
tempfile = "3.1"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["heapapi"]}

[dev-dependencies]
env_logger = "0.9"
fake = "2.2"
