[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
description = "This crate supports graph representation and generic query-functionality."
edition = "2024"
license = "Apache-2.0"
name = "graphannis-core"
readme = "crate-info.md"
repository = "https://github.com/korpling/graphANNIS"
version = "4.1.1"

[lib]

[dependencies]
binary-layout = "4.0.1"
bincode = "1.3"
clru = "0.6.1"
facet = "0.46.0"
itertools = "0.14"
lazy_static = "1.4"
log = "0.4"
memmap2 = "0.9"
normpath = "1.1.1"
num-traits = "0.2"
percent-encoding = "2.1"
quick-xml = "0.39"
rand = "0.10"
rayon = { version = "1.3", default-features = false }
regex = "1"
regex-syntax = "0.8"
rustc-hash = "2.1.2"
serde = { version = "1.0", features = ["rc"] }
serde_bytes = "0.11"
serde_derive = "1.0"
smallvec = "1.6"
sstable = "0.11"
tempfile = "3.1"
thiserror = "2"
toml = "1.1.2"
transient-btree-index = "0.5"

[dev-dependencies]
env_logger = "0.11"
fake = "5.1"
insta = { version = "1.38.0", features = ["json"] }
pretty_assertions = "1.3"
serde_json = "1.0"
