[package]
name = "graphannis"
version = "0.1.0" #:version
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
build = "build.rs"

[lib]
crate-type = ["rlib","staticlib"]

[dependencies]
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.8"

libc = "*"

[dev-dependencies]
tempdir = "0.3"


[build-dependencies]
moz-cheddar = "0.4.0"
