[package]
name = "graphannis"
version = "0.1.0" #:version
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
build = "build.rs"

[lib]
crate-type = ["rlib","staticlib","cdylib"]

[dependencies]
regex = "0.2"
regex-syntax = "0.4"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9"
rand = "0.3"
csv = "1.0.0-beta.5"
multimap = "0.4.0"
log = "0.3"
rustyline = "1.0.0"
simplelog = "^0.4.3"
lazy_static = "1.0"
strum = "*"
strum_macros = "*"

libc = "*"

[dev-dependencies]
tempdir = "0.3"
simplelog = "^0.4.3"


[build-dependencies]
moz-cheddar = "0.4"
rust-crypto = "^0.2"

