[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
build = "build.rs"
description = "This is a new backend implementation of the ANNIS linguistic search and visualization system."
edition = "2018"
license = "Apache-2.0"
name = "graphannis"
readme = "../README.md"
repository = "https://github.com/korpling/graphANNIS"
version = "2.2.1"

[lib]
crate-type = ["lib"]

[build-dependencies]
csv = "1.1"
file_diff = "1"
lalrpop = {version = "0.19", default_features = false, features = ["lexer"]}
regex = "1"

[dependencies]
boolean_expression = "0.4"
csv = "1"
extsort = "0.4"
fs2 = "0.4"
graphannis-core = {path = "../core/", version = "^2"}
graphannis-malloc_size_of = "1.0"
graphannis-malloc_size_of_derive = "2.0"
itertools = "0.10"
lalrpop-util = "0.19"
lazy_static = "1.4"
libc = "0.2"
linked-hash-map = "0.5"
log = "0.4"
memmap2 = "0.5"
page_size = "0.4"
percent-encoding = "2.1"
rand = {version = "0.8", features = ["small_rng"]}
rayon = {version = "1.3", default-features = false}
regex = "1"
regex-syntax = "0.6"
rustc-hash = "1.0"
serde = {version = "1.0", features = ["rc"]}
serde_derive = "1.0"
smallvec = "1.6"
smartstring = {version = "0.2", features = ["serde"]}
strum = "0.21"
strum_macros = "0.21"
sys-info = "0.9"
tempfile = "3"
thiserror = "1"
toml = "0.5"
transient-btree-index = {version = "0.3", git = 'https://github.com/thomaskrause/transient-btree-index', branch = 'feature/into-range'}
zip = "0.5"

[dev-dependencies]
criterion = "0.3"
fake = "2.2"

[[bench]]
harness = false
name = "graphannis"
