[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
description = "This is a web service to the new backend implementation of the ANNIS linguistic search and visualization system."
edition = "2018"
license = "Apache-2.0"
name = "graphannis-webservice"
readme = "crate-info.md"
repository = "https://github.com/korpling/graphANNIS"
version = "2.4.4"

[dependencies]
actix-cors = "0.6"
actix-files = "0.6"
actix-web = "4"
anyhow = "1"
bcrypt = "0.10"
chrono = "0.4"
clap = {version = "2", default-features = false}
config = {version = "0.13", default-features = false, features = ["toml"]}
diesel = {version = "1.4", default-features = false, features = ["sqlite", "r2d2"]}
diesel_migrations = {version = " 1.4", default-features = false}
futures = "0.3"
graphannis = {path = "../graphannis/", version = "^2"}
graphannis-core = {path = "../core/", version = "^2"}
jsonwebtoken = "7.2"
libsqlite3-sys = {version = "0.22", features = ["bundled"]}
log = "0.4"
percent-encoding = "2.1"
r2d2 = "0.8"
serde = {version = "1.0", features = ["rc"]}
serde_derive = "1.0"
simplelog = "0.12"
tempfile = "3"
thiserror = "1"
uuid = {version = "0.8", features = ["v4"]}
walkdir = "2"
zip = "0.6.4"
